<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/space_lg"
    android:paddingTop="@dimen/space_lg"
    android:paddingEnd="@dimen/space_lg"
    android:paddingBottom="@dimen/space_md">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/common_domain"
        app:startIconDrawable="@drawable/ic_discover"
        app:startIconTint="?attr/colorOnSurfaceVariant"
        style="@style/Widget.DnsOverride.TextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDomain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:textAppearance="@style/TextAppearance.DnsOverride.Body" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_lg"
        android:layout_marginBottom="@dimen/space_xs"
        android:text="@string/common_action"
        android:textAppearance="@style/TextAppearance.DnsOverride.Label" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/groupAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:checkedChip="@id/radioOverride">

        <com.google.android.material.chip.Chip
            android:id="@+id/radioOverride"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rule_action_override"
            app:chipCornerRadius="@dimen/radius_pill" />

        <com.google.android.material.chip.Chip
            android:id="@+id/radioBlock"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_action_block"
            app:chipCornerRadius="@dimen/radius_pill" />

        <com.google.android.material.chip.Chip
            android:id="@+id/radioDirect"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_action_direct"
            app:chipCornerRadius="@dimen/radius_pill" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutIp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:hint="@string/common_target"
        app:startIconDrawable="@drawable/ic_arrow_up"
        app:startIconTint="?attr/colorOnSurfaceVariant"
        style="@style/Widget.DnsOverride.TextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editIp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.DnsOverride.Body" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:hint="@string/common_note"
        style="@style/Widget.DnsOverride.TextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.DnsOverride.Body" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/checkEnabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_md"
        android:checked="true"
        android:text="@string/common_enabled" />
</LinearLayout>
